@@ -6,6 +6,7 @@
 * Fixed battery indication when charge_full and energy_full are not available.
 * Corrected scaling of volume plugin for HiDPI monitors.
 * Fixed connection name dropdown list in netstatus plugin.
+* Added option to battery monitor to hide number of battery in tooltip.
 
 0.10.0
 -------------------------------------------------------------------------
